<resources>
    <string name="app_name">JajanKuy</string>
    <string name="belum_daftar">Ingin bergabung dengan kami?</string>
    <string name="daftar_sekarang">Daftar sekarang</string>
    <string name="deskripsi">Jujur Biar Manjur</string>
    <string name="email">Email</string>
    <string name="email_sudah_digunakan">Alamat email sudah digunakan.</string>
    <string name="email_tersedia">Alamat email masih tersedia.</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="kirim_link_lupa">Kirim</string>
    <string name="kirim_link_lupa_desk">Link Reset Kata Sandi akan dikirimkan ke email kamu.</string>
    <string name="lupa_password">Lupa Kata Sandi</string>
    <string name="masuk">Masuk</string>
    <string name="upload_foto_diri">Upload Foto Diri Memegang KTP</string>
    <string name="berikutnya">Berikutnya</string>
    <string name="daftar">Daftar</string>
    <string name="foto_diri">Foto Diri\nMemegang KTP</string>
    <string name="info_akun">Info Akun</string>
    <string name="kata_sandi_desk">Minimal 9 karakter, terdiri dari huruf dan angka.</string>
    <string name="nomor_ponsel">Nomor Ponsel</string>
    <string name="periksa_email">Periksa Email</string>
    <string name="register_seller">Daftar Penjual</string>
    <string name="sebelumnya">Sebelumnya</string>
    <string name="ulangi_kata_sandi">Ulangi Kata Sandi</string>
    <string name="info_penjual">Info Penjual</string>
    <string name="nik_ktp">NIK KTP</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="alamat_kecamatan">Alamat Kecamatan</string>
    <string name="foto_tempat_usaha">Foto Tempat Usaha\natau Gerobak</string>
    <string name="nomor_izin_berjualan">Nomor Izin Berjualan (Opsional)</string>
    <string name="proses">Proses</string>
    <string name="pilih_kategori">Pilih Kategori</string>
    <string name="makanan_berat">Makanan\nBerat</string>
    <string name="makanan_ringan">Makanan\nRingan</string>
    <string name="minuman_panas">Minuman\nPanas</string>
    <string name="minuman_dingin">Minuman\nDingin</string>
    <string name="aneka_kue">Aneka\nKue</string>
    <string name="favorit">Menu\nFavorit</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="cari">Cari</string>
    <string name="mau_jajan_apa">Mau Jajan Apa?</string>
    <string name="title_account">Akun</string>
    <string name="title_home">Beranda</string>
    <string name="title_order">Pesanan</string>
    <string name="akun">Akun</string>
    <string name="ubah">Ubah</string>
    <string name="bantuan">Bantuan</string>
    <string name="ketentuan">Ketentuan Layanan</string>
    <string name="privasi">Kebijakan Privasi</string>
    <string name="nilai">Beri Nilai Aplikasi</string>
    <string name="keluar">Keluar</string>
    <string name="pesanan">Pesanan</string>
    <string name="daftar_pengguna">Daftar Pengguna</string>
    <string name="info_pengguna">Info Pengguna</string>
    <string name="kelola_menu">Kelola Menu</string>
    <string name="edit_menu">Edit\nMenu</string>
    <string name="tambah_menu">Tambah\nMenu</string>
    <string name="hapus_menu">Hapus\nMenu</string>
    <string name="tambah_menu_title">Tambah Menu</string>
    <string name="info_menu">Info Menu</string>
    <string name="nama_menu">Nama Menu</string>
    <string name="harga_menu">Harga Menu</string>
    <string name="foto_menu">Foto Menu</string>
    <string name="pasang_menu">Pasang Menu</string>
    <string name="kategori">Kategori</string>
    <string name="maaf_menu_tidak_ditemukan">Maaf, menu tidak ditemukan.</string>
    <string name="katalog_menu">Katalog Menu</string>
    <string name="makanan_yang_dijual">Makanan Yang Dijual</string>
    <string name="beli">Beli</string>
    <string name="tidak_ada_pesanan">Tidak ada pesanan</string>

    <string-array name="kategori_menu">
        <item>Makanan Berat</item>
        <item>Makanan Ringan</item>
        <item>Makanan Panas</item>
        <item>Makanan Dingin</item>
        <item>Aneka Kue</item>
    </string-array>

    <string-array name="urut">
        <item>Jarak Terdekat</item>
        <item>Harga Termurah</item>
    </string-array>
</resources>
