<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:elevation="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="15dp"
            android:text="@string/daftar_pengguna"
            android:textColor="@color/colorPutih"
            android:textSize="22sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/svDaftar"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardBackgroundColor="#fff"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="5dp"
                card_view:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#fff"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/llInfoAkun"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#fff"
                        android:orientation="vertical"
                        android:paddingLeft="24dp"
                        android:paddingRight="24dp"
                        android:paddingBottom="10dp"
                        android:visibility="gone">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="20dp"
                            android:text="@string/info_akun"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp">

                            <EditText
                                android:id="@+id/etUserEmail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/garis_2"
                                android:hint="@string/email"
                                android:inputType="textEmailAddress"
                                android:textColor="#454545"
                                android:textColorHint="#454545"
                                android:textColorLink="#454545"
                                android:textSize="15sp" />

                            <TextView
                                android:id="@+id/tvEmail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:textColor="@color/colorMerah"
                                android:textSize="12sp" />

                            <androidx.appcompat.widget.AppCompatButton
                                android:id="@+id/acbCheckEmail"
                                android:layout_width="130dp"
                                android:layout_height="30dp"
                                android:layout_marginTop="5dp"
                                android:background="@drawable/rounded_button"
                                android:text="@string/periksa_email"
                                android:textColor="#fff"
                                android:textSize="14sp" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp">

                            <EditText
                                android:id="@+id/etPassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/garis_2"
                                android:hint="@string/kata_sandi"
                                android:inputType="textPassword"
                                android:textColor="#454545"
                                android:textColorHint="#454545"
                                android:textSize="15sp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:text="@string/kata_sandi_desk"
                                android:textColor="@color/colorMerah"
                                android:textSize="12sp" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp">

                            <EditText
                                android:id="@+id/etRePassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/garis_2"
                                android:hint="@string/ulangi_kata_sandi"
                                android:inputType="textPassword"
                                android:textColor="#454545"
                                android:textColorHint="#454545"
                                android:textSize="15sp" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:baselineAligned="false"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="10dp"
                                android:layout_weight="1"
                                android:gravity="center">

                                <androidx.appcompat.widget.AppCompatButton
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/rounded_button"
                                    android:onClick="sebelumnyaDaftar"
                                    android:padding="5dp"
                                    android:text="@string/sebelumnya"
                                    android:textColor="#fff"
                                    android:textSize="16sp"
                                    android:textStyle="bold" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_weight="1"
                                android:gravity="center">

                                <androidx.appcompat.widget.AppCompatButton
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/rounded_button"
                                    android:onClick="daftarUser"
                                    android:padding="5dp"
                                    android:text="@string/daftar"
                                    android:textColor="#fff"
                                    android:textSize="16sp"
                                    android:textStyle="bold" />
                            </LinearLayout>
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llInfoUser"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#fff"
                        android:orientation="vertical"
                        android:paddingLeft="24dp"
                        android:paddingRight="24dp"
                        android:paddingBottom="10dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="20dp"
                            android:text="@string/info_pengguna"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp">

                            <EditText
                                android:id="@+id/etUserName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/garis_2"
                                android:hint="@string/nama_lengkap"
                                android:inputType="textCapWords"
                                android:textColor="#454545"
                                android:textColorHint="#454545"
                                android:textColorLink="#454545"
                                android:textSize="15sp" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp">

                            <EditText
                                android:id="@+id/etUserPhone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/garis_2"
                                android:hint="@string/nomor_ponsel"
                                android:inputType="phone"
                                android:textColor="#454545"
                                android:textColorHint="#454545"
                                android:textColorLink="#454545"
                                android:textSize="15sp" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:baselineAligned="false"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="10dp"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:visibility="invisible">

                                <androidx.appcompat.widget.AppCompatButton
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/rounded_button"
                                    android:onClick="berikutnyaDaftar"
                                    android:padding="5dp"
                                    android:text="@string/berikutnya"
                                    android:textColor="#fff"
                                    android:textSize="16sp"
                                    android:textStyle="bold" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_weight="1"
                                android:gravity="center">

                                <androidx.appcompat.widget.AppCompatButton
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/rounded_button"
                                    android:onClick="berikutnyaDaftar"
                                    android:padding="5dp"
                                    android:text="@string/berikutnya"
                                    android:textColor="#fff"
                                    android:textSize="16sp"
                                    android:textStyle="bold" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
